Add CMS and make a few other changes